# data-compression

./: .gitignore
practica/1-arithmetic-coding/: alph.txt  codec.py  encode_in.txt  test_in.txt
practica/2-image-compression/project/: .gitignore  CMakeLists.txt  compression_model.txt  input.raw  moviecomp  readme.txt  settings.conf  storage_model.txt  test.py
practica/2-image-compression/project/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  project.cbp
practica/2-image-compression/project/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  project.cbp
practica/2-image-compression/project/src/: BitStream.cpp  BitStream.h  ByteMatrix.cpp  ByteMatrix.h  Config.cpp  Config.h  Init.cpp  Init.h  Logger.cpp  Logger.h  Main.cpp  Main.h  MainCodec.cpp  MainDecoder.cpp  MainEncoder.cpp  PixelBlock.cpp  PixelBlock.h  QuantFileParser.cpp  QuantFileParser.h  QuantMatrix.cpp  QuantMatrix.h  RawFileParser.cpp  RawFileParser.h  RleCodec.cpp  RleCodec.h  StorageFormatCodec.cpp  StorageFormatCodec.h  ValueBlock4x4.cpp  ValueBlock4x4.h  codec.cpp  configreader.cpp  configreader.h  decoder.cpp  encoder.cpp  main.cpp
practica/3-video-compression/: .gitignore  CMakeLists.txt  test.py
practica/3-video-compression/final/wout_reinaert/src/: CMakeLists.txt
practica/3-video-compression/final/wout_reinaert/src/src/: BitStream.cpp  Config.cpp  Config.h  DecoderConfig.h  Frame.h  IFrameStorageCodec.cpp  Logger.cpp  RleCodec.h  ValueBlock4x4.cpp  ValueBlock4x4.h  encoder.cpp
practica/3-video-compression/src/: Codec.cpp  Codec.h  CompactingCodec.cpp  CompactingCodec.h  Config.cpp  Config.h  DecoderConfig.cpp  EncoderConfig.cpp  EncoderConfig.h  Frame.cpp  Frame.h  IFrameCodec.cpp  IFrameCodec.h  IFrameStorageCodec.cpp  IFrameStorageCodec.h  Logger.h  QuantFileParser.cpp  QuantFileParser.h  RawFileParser.cpp  RawFileParser.h  RleCodec.cpp  RleCodec.h  ValueBlock4x4.cpp  ValueBlock4x4.h  VideoCodec.cpp  VideoCodec.h  decoder.cpp
practica/3-video-compression/src/configs/: Config.cpp  DecoderConfig.h  EncoderConfig.cpp  EncoderConfig.h
practica/3-video-compression/src/frames/: Frame.cpp  Frame.h  IFrame.cpp  IFrame.h  PFrame.cpp  PFrame.h
practica/3-video-compression/src/helpers/: BitStream.cpp  BitStream.h
practica/3-video-compression/src/main/: Codec.cpp  Codec.h  encoder.cpp
practica/3-video-compression/test/sample02/: sample02.enc.conf
practica/3-video-compression/test/sample03/: sample03.mat
practica/3-video-compression/test/sample04/: sample04.dec.conf
practica/3-video-compression/tests/akiyo/: akiyo.dec.conf  akiyo.enc.conf
practica/3-video-compression/tests/bus/: bus.dec.conf  bus.enc.conf
practica/3-video-compression/tests/foreman/: foreman.dec.conf  foreman.enc.conf
practica/3-video-compression/tests/sample00/: sample00.dec.conf  sample00.enc.conf
practica/3-video-compression/tests/sample01/: sample01.dec.conf  sample01.enc.conf
practica/3-video-compression/tests/sample02/: sample02.dec.conf  sample02.enc.conf  sample02.mat
practica/3-video-compression/tests/sample03/: sample03.dec.conf  sample03.enc.conf
practica/3-video-compression/tests/sample04/: sample04.enc.conf
practica/3-video-compression/tests/waterfall/: waterfall.dec.conf  waterfall.enc.conf
slides/: DC-0-Course-info.pptx  DC-1-General-principles.pptx  DC-2-Text-compression.pptx  DC-3-Image-Compression-2017.pptx
(+4 files in other folders)
